# advent-of-code-2021

./: pyproject.toml
01/: README.md  code.py
02/: README.md  code.py  code_2stars.py
03/: README.md  code.py  code_2stars.py
06/: README.md  code.py
