[tool.poetry]
name = "advent-of-code-2021"
version = "0.1.0"
description = ""
authors = ["Kasra Safari <kasrasafari@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^7.30.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
